--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     ext {
-        kotlinVer = '1.2.51'
+        kotlinVer = '1.2.60'
+        navVer = '1.0.0-alpha04'
     }
 
     repositories {
@@ -12,6 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVer"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navVer"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
