--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     //implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha04'
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
     implementation "android.arch.navigation:navigation-runtime-ktx:$navVer"
-    //implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha04'
+    implementation "android.arch.navigation:navigation-ui:$navVer"
 
 }
