--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVer"
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:28.0.1'
-    implementation 'com.android.support:appcompat-v7:28.0.1'
+//    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+//    implementation 'com.android.support:design:28.0.1'
+//    implementation 'com.android.support:appcompat-v7:28.0.1'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-beta01'
