--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,24 +19,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.1'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVer"
+
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-//    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-//    implementation 'com.android.support:design:28.0.1'
-//    implementation 'com.android.support:appcompat-v7:28.0.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    //implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha04'
-
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
     implementation "android.arch.navigation:navigation-runtime-ktx:$navVer"
     implementation "android.arch.navigation:navigation-ui:$navVer"
-
 }
