--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ buildscript {
         navVer = '1.0.0-alpha04'
         butterknifeVer = "8.8.1"
         roomVer = "1.1.1"
-        workVer = "1.0.0-alpha05"
+        workVer = "1.0.0-alpha06"
+        sptLibVer = '28.0.0'
+        constraintVer = "1.1.2"
+        lifecycleVer = "1.1.1"
     }
 
     repositories {
@@ -14,7 +17,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0-alpha03'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVer"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navVer"
 
