--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 //apply plugin: 'androidx.navigation.safeargs'
 
 android {
@@ -41,5 +41,9 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$roomVer"
 
     implementation "android.arch.work:work-runtime-ktx:$workVer"
+
+    // mainly just used to bind string resources.
+    implementation "com.jakewharton:butterknife:$butterVer"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterVer"
 
 }
