--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVer"
 
-    implementation 'androidx.annotation:annotation:1.0.0-rc02'
-    implementation 'androidx.appcompat:appcompat:1.0.0-rc02'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.annotation:annotation:$xAnnotVer"
+    implementation "androidx.appcompat:appcompat:$xAppComVer"
+    implementation "androidx.constraintlayout:constraintlayout:$xConstLayVer"
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0-rc01'
+    implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
+    kapt "androidx.lifecycle:lifecycle-compiler:$xCycleVer"
 
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
     implementation "android.arch.navigation:navigation-runtime-ktx:$navVer"
