--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@
 buildscript {
     ext {
         kotlinVer = '1.2.71'
-        navVer = '1.0.0-alpha05'
+        navVer = '1.0.0-alpha06'
         roomVer = "1.1.1"
-        workVer = "1.0.0-alpha08"
+        workVer = "1.0.0-alpha09"
+        xCycleVer = "2.0.0"
+        xAnnotVer = "1.0.0"
+        xAppComVer = "1.0.0"
+        xConstLayVer = "1.1.3"
     }
 
     repositories {
