--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     ext {
-        kotlinVer = '1.3.0'
+        kotlinVer = '1.3.10'
         navVer = '1.0.0-alpha07'
         roomVer = "1.1.1"
-        workVer = "1.0.0-alpha09" // alpha11 causes issues.
+        workVer = "1.0.0-alpha09" // alpha10 and alpha11 cause issues.
         xCycleVer = "2.0.0"
         xAnnotVer = "1.0.0"
         xAppComVer = "1.0.2"
