--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    // refer https://developer.android.com/jetpack/docs/release-notes
     ext {
         kotlinVer = '1.3.10'
         navVer = '1.0.0-alpha07'
-        roomVer = "1.1.1"
-        workVer = "1.0.0-alpha09" // alpha10 and alpha11 cause issues.
+        roomVer = "2.1.0-alpha02"
+        workVer = "1.0.0-alpha11"
         xCycleVer = "2.0.0"
         xAnnotVer = "1.0.0"
         xAppComVer = "1.0.2"
