--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$xConstLayVer"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
     kapt "androidx.lifecycle:lifecycle-compiler:$xCycleVer"
 
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
