--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
     // refer https://developer.android.com/jetpack/docs/release-notes
     ext {
         kotlinVer = '1.3.11'
-        navVer = '1.0.0-alpha08'
+        navVer = '1.0.0-alpha09'
         roomVer = "2.1.0-alpha02"
-        workVer = "1.0.0-alpha12"
+        workVer = "1.0.0-beta01"
         xCycleVer = "2.0.0"
         xAnnotVer = "1.0.0"
         xAppComVer = "1.1.0-alpha01"
