--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@
 buildscript {
     // refer https://developer.android.com/jetpack/docs/release-notes
     ext {
-        kotlinVer = '1.3.11'
-        navVer = '1.0.0-alpha09'
+        kotlinVer = '1.3.21'
+        navVer = '1.0.0-beta02'
         roomVer = "2.1.0-alpha02"
         workVer = "1.0.0-beta01"
         xCycleVer = "2.0.0"
         xAnnotVer = "1.0.0"
-        xAppComVer = "1.1.0-alpha01"
+        xAppComVer = "1.1.0-alpha02"
         xConstLayVer = "1.1.3"
     }
 
@@ -18,7 +18,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVer"
 
         // NOTE: Do not place your application dependencies here; they belong
