--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         }
     }
 
-    buildToolsVersion '28.0.3'
+    buildToolsVersion '29.0.0-rc2'
 
 //    packagingOptions {
 //        exclude 'META-INF/proguard/androidx-annotations.pro'
@@ -38,10 +38,10 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0-alpha03'
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'androidx.preference:preference:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha02'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     kapt "androidx.lifecycle:lifecycle-compiler:$xCycleVer"
 
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
