--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@
 buildscript {
     // refer https://developer.android.com/jetpack/docs/release-notes
     ext {
-        kotlinVer = '1.3.21'
-        navVer = '1.0.0-beta02'
+        kotlinVer = '1.3.30'
+        navVer = '1.0.0'
         roomVer = "2.1.0-alpha02"
-        workVer = "1.0.0-beta01"
+        workVer = "1.0.1"
         xCycleVer = "2.0.0"
         xAnnotVer = "1.0.0"
-        xAppComVer = "1.1.0-alpha02"
+        xAppComVer = "1.1.0-alpha04"
         xConstLayVer = "1.1.3"
     }
 
