--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
     implementation "androidx.annotation:annotation:$xAnnotVer"
     implementation "androidx.appcompat:appcompat:$xAppComVer"
+    implementation 'androidx.fragment:fragment:1.1.0-alpha09'
     implementation "androidx.constraintlayout:constraintlayout:$xConstLayVer"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
