--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "mcssoft.com.racereminderac"
-        minSdkVersion 22
+        minSdkVersion 27
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -34,7 +34,7 @@ dependencies {
 
     implementation "androidx.annotation:annotation:$xAnnotVer"
     implementation "androidx.appcompat:appcompat:$xAppComVer"
-    implementation 'androidx.fragment:fragment:1.1.0-alpha09'
+//    implementation 'androidx.fragment:fragment:1.1.0-alpha09'
     implementation "androidx.constraintlayout:constraintlayout:$xConstLayVer"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
