--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
         navVer = '1.0.0'
         roomVer = "2.1.0-alpha02"
         workVer = "1.0.1"
-        xCycleVer = "2.0.0"
-        xAnnotVer = "1.0.0"
+        xCycleVer = '2.2.0-alpha02'
+        xAnnotVer = '1.1.0'
         xAppComVer = "1.1.0-rc01"
-        xConstLayVer = "1.1.3"
+        xConstLayVer = '2.0.0-beta2'
     }
 
     repositories {
