--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.0-rc01'
-    implementation 'com.google.android.material:material:1.1.0-alpha07' // alpha08 causes crash.
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
     kapt "androidx.lifecycle:lifecycle-compiler:$xCycleVer"
