--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+//    implementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-2'
+
 }
