--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.0-rc01'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
     kapt "androidx.lifecycle:lifecycle-compiler:$xCycleVer"
 
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
@@ -54,7 +54,8 @@ dependencies {
     implementation "android.arch.work:work-runtime-ktx:$workVer"
 
     implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'org.simpleframework:simple-xml:2.7.1'
+    implementation 'com.android.volley:volley:1.1.1'
+
 //    implementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-2'
 
 }
