--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.android.volley:volley:1.1.1'
 
+    implementation 'androidx.paging:paging-runtime-ktx:2.1.0'
+
 }
