--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         }
     }
 
-    buildToolsVersion '29.0.0'
+    buildToolsVersion '29.0.2'
 
 //    packagingOptions {
 //        exclude 'META-INF/proguard/androidx-annotations.pro'
@@ -39,9 +39,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$xCycleVer"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
     kapt "androidx.lifecycle:lifecycle-compiler:$xCycleVer"
 
     implementation "android.arch.navigation:navigation-fragment-ktx:$navVer"
